increased animation duration, fixed code z-index

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,6 +14,7 @@ code {
 }
 #source {
   position: absolute;
+  z-index: -1;
 }
 .center {
   width: 500px;
